# boiler-iot-simulation

./: .dockerignore  .env  .env.example  .gitignore  BOILER_IOT_POC_STANDARD_GUIDE.md  CHANGES_chat_api_fix.md  CHRONOS_AUDIT_REPORT.md  CHRONOS_EXPLANATION.md  CHRONOS_GUIDE.md  CLAUDE.md  DAY1_DAY2_GUIDE.md  Dockerfile  Fine-tuning.md  PRODUCTION_GAPS.md  PROJECT_EXPLANATION.md  PROJECT_OVERVIEW.md  RAGAS_FIX_GUIDE.md  README.md  REDIS_CHAT_CACHE_GUIDE.md  TECHNICAL_GUIDE.md  agentic_rag_boiler_guide.md  boiler_data.csv  boiler_iot_7day_guide (1).md  boiler_iot_7day_guide.md  chronos_boiler_integration.md  chronos_implementation_plan.md  docker-compose.yml  knowledge_base_and_ragas_guide (1).md  main.py  package-lock.json  publisher.py  pyproject.toml  query.csv  requirements.txt  streamlit_app.py  subcriber.py  test_agent.py  test_ragas.py  test_ragas_results.json
Frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
Frontend/app/: globals.css  layout.tsx
Frontend/components/: AgentSteps.tsx  AlertBanner.tsx  ChatPanel.tsx  ChronosEvaluationChart.tsx  ChronosForecastChart.tsx  Dashboard.tsx  FaultsList.tsx  FloatingAssistant.tsx  Markdown.tsx  SensorCard.tsx  SimulationModeToggle.tsx  TopBar.tsx  TrendChart.tsx
Frontend/lib/: api.ts  sensors.ts
api/: chatbot_api.py
assistant/: config.py
assistant/agent/: alert_manager.py  chronos_service.py  orchestrator.py  tool_schemas.py
assistant/cache/: __init__.py  chat_cache.py
chroma_db/: chroma.sqlite3
consumers/: fault_detector.py  influx_consumer.py
evaluation/: chronos_eval.py  dataset_prep.py  evaluator.py  finetune_chronos.py  plot_results.py
exporters/: csv_exporter.py
knowledge_base/: boiler_guide.py  indexer.py
subscriber/: chimney_subscriber.py
(+12 files in other folders)
