[project]
name = "boiler-iot-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "chronos-forecasting>=2.3.0",
    "fastapi>=0.136.3",
    "google-cloud-aiplatform>=1.157.0",
    "influxdb-client>=1.50.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-google-vertexai>=3.2.4",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "matplotlib>=3.8.0",
    "mistralai>=2.4.9",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.6",
    "paho-mqtt>=2.1.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "redis>=5.0.0",
    "requests>=2.34.2",
    "sentence-transformers>=2.7.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "uvicorn>=0.49.0",
    "vertexai>=1.43.0",
]
